--- a/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_meetinglijst.xml
+++ b/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_meetinglijst.xml
@@ -3,19 +3,22 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:orientation="vertical">
 
     <android.support.constraint.Guideline
-            android:id="@+id/guideline_45percent"
+            android:id="@+id/guide_meetinglijst_45percent_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.45"/>
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview_meeting_lijst"
+            android:id="@+id/recyclerview_meetinglijst"
             android:layout_width="0dp"
             android:layout_height="match_parent"
 
@@ -25,33 +28,33 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_45percent"
+            app:layout_constraintEnd_toStartOf="@+id/guide_meetinglijst_45percent_vertical"
 
             android:layout_marginEnd="8dp"/>
 
 
     <View
-            android:id="@+id/seperator_meetinglijst_45percent"
+            android:id="@+id/divider_meetinglijst_45percent"
             android:layout_width="2dp"
             android:layout_height="0dp"
             android:background="@android:color/darker_gray"
 
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-
-            app:layout_constraintEnd_toStartOf="@+id/guideline_45percent"
+            app:layout_constraintEnd_toStartOf="@+id/guide_meetinglijst_45percent_vertical"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"/>
 
     <FrameLayout
-            android:id="@+id/container_meeting_detail"
+            android:id="@+id/frame_meetinglijst_meetingdetail"
             android:layout_width="0dp"
             android:layout_height="match_parent"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf= "@+id/seperator_meetinglijst_45percent"
+            app:layout_constraintStart_toStartOf="@+id/divider_meetinglijst_45percent"
 
             android:layout_marginStart="8dp"/>
 </android.support.constraint.ConstraintLayout>
