--- a/CarMeets Android App/app/src/main/res/layout/activity_main.xml
+++ b/CarMeets Android App/app/src/main/res/layout/activity_main.xml
@@ -2,45 +2,50 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+
+        android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/menu_main_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
+
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:theme="@style/ToolbarTheme"
             app:titleTextAppearance="@style/ToolbarTheme.ToolbarTextAppearance.Title"
             app:subtitleTextAppearance="@style/ToolbarTheme.ToolbarTextAppearance.Subtitle"
-            app:title="@string/ab_meetings_titel"
-            app:subtitle="@string/ab_meetings_subtitel"
 
-    />
-
-    <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>
+            app:layout_constraintTop_toTopOf="parent"
+
+            app:title="@string/ab_meetings_titel"
+            app:subtitle="@string/ab_meetings_subtitel"/>
+
+    <FrameLayout
+            android:id="@+id/frame_main_fragmentcontainer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/menu_main_toolbar"
+            app:layout_constraintBottom_toTopOf="@id/menu_main_bottomnavigation"/>
 
     <android.support.design.widget.BottomNavigationView
-            android:id="@+id/bottom_navigation"
+            android:id="@+id/menu_main_bottomnavigation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:menu="@menu/bottom_navigation" />
 
-
+            app:menu="@menu/bottom_navigation"/>
 
 
 </android.support.constraint.ConstraintLayout>
