--- a/CarMeets Android App/app/src/main/res/layout/fragment_account.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_account.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+
+        android:orientation="vertical">
 
     <TextView
-            android:id="@+id/textview_account_temptekst"
+            android:id="@+id/text_account_temptekst"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="hallo van account"
-    />
+
+            android:text="hallo van account"/>
 
 </android.support.constraint.ConstraintLayout>
