--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
@@ -2,143 +2,172 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+
+        android:orientation="vertical">
 
 
     <ImageView
-            android:id="@+id/item_meeting_afbeelding"
+            android:id="@+id/image_meetingdetail_header"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+
             app:layout_constraintDimensionRatio="H,16:9"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/auto"
+
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-    <android.support.constraint.ConstraintLayout android:layout_alignParentTop="true"
-                                                 android:background="@android:color/white"
-                                                 android:layout_width="0px"
-                                                 app:layout_constraintHorizontal_weight="1"
-                                                 android:layout_height="wrap_content"
-                                                 app:layout_constraintEnd_toEndOf="parent"
-                                                 android:paddingBottom="8dp"
-                                                 android:paddingTop="8dp"
-                                                 android:layout_marginEnd="10dp"
-                                                 android:id="@+id/partial_meetingdetail_likedgoing"
-                                                 app:layout_constraintBottom_toTopOf="@+id/partial_meetingdetail_date"
-                                                 app:layout_constraintStart_toStartOf="@+id/partial_meetingdetail_date">
+    <android.support.constraint.ConstraintLayout
+            android:id="@+id/partial_meetingdetail_likedgoing"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentTop="true"
+            android:background="@android:color/white"
+            app:layout_constraintHorizontal_weight="1"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/partial_meetingdetail_date"
+            app:layout_constraintStart_toStartOf="@+id/partial_meetingdetail_date"
+
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:layout_marginEnd="10dp">
 
         <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/icon_meetdetail_like"
+                android:id="@+id/image_meetingdetail_like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
                 android:src="@drawable/ic_heart_black_24dp"
 
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+
+                android:layout_marginStart="8dp"/>
 
         <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/icon_meetdetail_going"
+                android:id="@+id/image_meetingdetail_going"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
                 android:src="@drawable/ic_check_black_24dp"
 
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+                app:layout_constraintEnd_toEndOf="parent"
+
+                android:layout_marginEnd="8dp"/>
 
 
     </android.support.constraint.ConstraintLayout>
 
-    <android.support.constraint.ConstraintLayout android:layout_alignParentTop="true"
-                                                 android:background="@color/colorPrimary"
-                                                 android:layout_width="wrap_content"
-                                                 android:layout_height="wrap_content"
-                                                 app:layout_constraintHorizontal_weight="1"
-                                                 app:layout_constraintTop_toBottomOf="@+id/item_meeting_afbeelding"
-                                                 app:layout_constraintEnd_toEndOf="parent"
-                                                 android:layout_marginEnd="10dp"
-                                                 android:paddingLeft="10dp"
-                                                 android:paddingRight="10dp"
-                                                 android:paddingBottom="8dp"
-                                                 android:id="@+id/partial_meetingdetail_date">
+    <android.support.constraint.ConstraintLayout
+            android:id="@+id/partial_meetingdetail_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentTop="true"
+            android:background="@color/colorPrimary"
+
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintTop_toBottomOf="@+id/image_meetingdetail_header"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            android:layout_marginEnd="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="8dp">
 
         <TextView
+                android:id="@+id/text_meetingdetail_dateday"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+
                 android:textColor="@android:color/white"
                 android:textAlignment="center"
-                android:id="@+id/textView_meetingdetail_dateday"
                 android:textSize="34dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:text="@string/item_meeting_dateday"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-        />
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"/>
 
         <TextView
+                android:id="@+id/textView_meetingdetail_datemonth"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+
                 android:textColor="@android:color/white"
-                android:id="@+id/textView_meetingdetail_datemonth"
                 android:textAlignment="center"
                 android:textSize="18dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:text="@string/item_meeting_datemonth"
+
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView_meetingdetail_dateday"
-                android:text="@string/item_meeting_datemonth"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_dateday"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"/>
+
     </android.support.constraint.ConstraintLayout>
 
 
     <TextView
-            android:id="@+id/textView_meetingdetail_titel"
-            android:text="@string/item_meeting_titel"
+            android:id="@+id/text_meetingdetail_titel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
-            app:layout_constraintTop_toBottomOf="@+id/item_meeting_afbeelding"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
 
+            android:text="@string/item_meeting_titel"
             android:textSize="24sp"
             android:textColor="@android:color/black"
+
+            app:layout_constraintTop_toBottomOf="@+id/image_meetingdetail_header"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
 
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"/>
 
     <TextView
-            android:id="@+id/textView_meetingdetail_subtitel"
-            android:text="@string/item_meeting_subtitel"
+            android:id="@+id/text_meetingdetail_subtitel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
-            app:layout_constraintTop_toBottomOf="@+id/textView_meetingdetail_titel"
+            android:textSize="18sp"
+            android:text="@string/item_meeting_subtitel"
+
+            app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_titel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
-
-            android:textSize="18sp"
 
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"/>
 
     <View
-            android:id="@+id/seperator_meetingdetail_ondersubtitel"
+            android:id="@+id/divider_meetingdetail_ondersubtitel"
             android:layout_width="0dp"
             android:layout_height="1dp"
+
+
             android:background="@android:color/darker_gray"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_subtitel"
+            app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
 
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_meetingdetail_subtitel"
-            app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"/>
+            android:layout_marginEnd="8dp"/>
 
     <ScrollView
             android:layout_width="match_parent"
@@ -146,15 +175,13 @@
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
-
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/seperator_meetingdetail_ondersubtitel"
+            app:layout_constraintTop_toBottomOf="@+id/divider_meetingdetail_ondersubtitel"
 
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-    >
+            android:layout_marginBottom="8dp">
 
         <android.support.constraint.ConstraintLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
@@ -163,10 +190,12 @@
                 android:layout_height="match_parent">
 
             <TextView
-                    android:id="@+id/textView_meetingdetail_beschrijving"
-                    android:text="@string/item_meeting_beschrijving"
+                    android:id="@+id/text_meetingdetail_beschrijving"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+
+                    android:text="@string/item_meeting_beschrijving"
+
                     app:layout_constraintTop_toTopOf="parent"/>
 
             <Button
@@ -178,13 +207,13 @@
                     android:drawableRight="@drawable/ic_add_alert_pink_18dp"
                     android:text="@string/button_meeting_notificatie"
 
+                    app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_beschrijving"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
 
                     android:layout_marginTop="8dp"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginRight="50dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_meetingdetail_beschrijving"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    android:layout_marginRight="50dp"/>
 
             <Button
                     android:id="@+id/button_meetingdetail_agenda"
@@ -195,13 +224,13 @@
                     android:drawableRight="@drawable/ic_add_agenda_pink_18dp"
                     android:text="@string/button_meeting_agenda"
 
+                    app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_notificatie"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
 
                     android:layout_marginTop="8dp"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginRight="50dp"
-                    app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_notificatie"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    android:layout_marginRight="50dp"/>
 
             <Button
                     android:id="@+id/button_meetingdetail_route"
@@ -212,14 +241,13 @@
                     android:drawableRight="@drawable/ic_navigation_pink_18dp"
                     android:text="@string/button_meeting_routebeschrijving"
 
-
-                    android:layout_marginTop="8dp"
-                    android:layout_marginLeft="50dp"
-                    android:layout_marginRight="50dp"
                     app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_agenda"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-            />
+
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"/>
 
             <Button
                     android:id="@+id/button_meetingdetail_website"
@@ -230,19 +258,16 @@
                     android:drawableRight="@drawable/ic_link_pink_18dp"
                     android:text="@string/button_meeting_website"
 
-
-                    android:layout_marginTop="8dp"
-                    android:layout_marginLeft="50dp"
-                    android:layout_marginRight="50dp"
                     app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_route"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-            />
 
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"/>
 
         </android.support.constraint.ConstraintLayout>
 
     </ScrollView>
-
 
 </android.support.constraint.ConstraintLayout>
