--- a/CarMeets Android App/app/src/main/res/layout/fragment_placeholder_logo.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_placeholder_logo.xml
@@ -2,47 +2,53 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:orientation="vertical">
 
 
     <ImageView
             android:id="@+id/imageview_logo"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+
             app:layout_constraintDimensionRatio="H,550:163"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/logo"
 
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"
-
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/guideline_50percent_horizontal"/>
+            app:layout_constraintBottom_toBottomOf="@+id/guideline_50percent_horizontal"
+
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"/>
 
     <android.support.constraint.Guideline
             android:id="@+id/guideline_50percent_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5"/>
 
     <TextView
-            android:text="@string/about_carmeets_over"
+            android:id="@+id/text_placeholderlogo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginTop="15dp"
-
+            android:text="@string/about_carmeets_over"
             android:textSize="15dp"
             android:textAlignment="center"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline_50percent_horizontal"/>
+            app:layout_constraintTop_toTopOf="@+id/guideline_50percent_horizontal"
+
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="15dp"/>
 
 </android.support.constraint.ConstraintLayout>
