--- a/CarMeets Android App/app/src/main/res/layout/item_meeting_groot.xml
+++ b/CarMeets Android App/app/src/main/res/layout/item_meeting_groot.xml
@@ -2,68 +2,84 @@
 <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:layout_margin="10dp"
         app:cardCornerRadius="7dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+
+        android:orientation="vertical">
 
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
         <ImageView
-                android:id="@+id/item_meeting_afbeelding"
+                android:id="@+id/image_itemmeeting"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+
                 app:layout_constraintDimensionRatio="H,16:9"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/auto"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:layout_marginTop ="15dp"
+
+
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop ="15dp"/>
         <TextView
-                android:id="@+id/item_meeting_titel"
+                android:id="@+id/text_itemmeeting_titel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:text="@string/item_meeting_titel"
                 android:textSize="24sp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
                 android:textColor="@android:color/black"
-                app:layout_constraintTop_toBottomOf="@+id/item_meeting_afbeelding"
+
+
+                app:layout_constraintTop_toBottomOf="@+id/image_itemmeeting"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:layout_marginTop="8dp"/>
         <TextView
-                android:id="@+id/item_meeting_subtitel"
+                android:id="@+id/text_itemmeeting_subtitel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:text="@string/item_meeting_subtitel"
                 android:textSize="18sp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/item_meeting_titel"/>
+                app:layout_constraintTop_toBottomOf="@+id/text_itemmeeting_titel"
+
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"/>
         <TextView
-                android:id="@+id/item_meeting_locatie"
+                android:id="@+id/text_itemmeeting_locatie"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:text="@string/item_meeting_locatie"
+                android:drawableLeft="@drawable/ic_location_pink_20dp"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_itemmeeting_subtitel"
+
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:paddingTop="5dp"
-                android:paddingBottom="10dp"
-                android:drawableLeft="@drawable/ic_location_pink_20dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/item_meeting_subtitel"
-                app:layout_constraintHorizontal_bias="0.0"/>
+                android:paddingBottom="10dp"/>
 
     </android.support.constraint.ConstraintLayout>
 
