--- a/CarMeets Android App/app/src/main/res/layout/partial_notificatiebel.xml
+++ b/CarMeets Android App/app/src/main/res/layout/partial_notificatiebel.xml
@@ -1,36 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                style="@android:style/Widget.ActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center"
-                android:background="@android:color/transparent"
-                android:clickable="true"
-                android:gravity="center"
-                android:orientation="vertical">
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+
+        style="@android:style/Widget.ActionButton"
+
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+
+        android:layout_gravity="center"
+        android:gravity="center"
+
+        android:clickable="true"
+        android:background="@android:color/transparent"
+
+        android:orientation="vertical">
 
     <ImageView
-            android:id="@+id/nav_notificatiebel"
+            android:id="@+id/image_partialnotificaties_bel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            android:gravity="center"
+
             android:src="@drawable/ic_notifications_white_24dp"
-            android:clickable="true"/>
+            android:gravity="center"
+            android:clickable="true"
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/nav_notificatiebel_aantal"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_marginLeft="18dp"
-              android:background="@drawable/ic_chat_bubble_white_16dp"
-              android:gravity="center"
-              android:minWidth="17sp"
-              android:text="2"
-              android:textColor="@color/colorPrimary"
-              android:textSize="12sp"
-              android:paddingBottom="5dp"
-              android:clickable="true"/>
+            android:layout_margin="0dp"/>
 
+    <TextView
+            android:id="@+id/text_partialnotificaties_aantal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="17sp"
+
+            android:text="2"
+            android:textColor="@color/colorPrimary"
+            android:textSize="12sp"
+
+            android:background="@drawable/ic_chat_bubble_white_16dp"
+            android:gravity="center"
+            android:clickable="true"
+
+            android:layout_marginLeft="18dp"
+            android:paddingBottom="5dp"/>
 
 </RelativeLayout>
