--- a/CarMeets Android App/app/src/main/res/menu/toolbar.xml
+++ b/CarMeets Android App/app/src/main/res/menu/toolbar.xml
@@ -5,30 +5,30 @@
 
     <!-- notificaties -->
     <item
+            android:id="@+id/nav_notifications"
             android:title="@string/ab_notifications"
-            android:id="@+id/nav_notificaties"
             android:icon="@drawable/ic_notifications_white_24dp"
             app:actionLayout="@layout/partial_notificationbell"
             app:showAsAction="always"/>
 
     <!-- zoeken -->
     <item
+            android:id="@+id/nav_search"
             android:title="@string/ab_search"
-            android:id="@+id/nav_zoek"
             android:icon="@drawable/ic_search_white_24dp"
             app:showAsAction="always"/>
 
     <!-- kleine lijst weergave -->
     <item
+            android:id="@+id/ab_options_small"
             android:title="@string/ab_options_listdesign_big"
-            android:id="@+id/ab_opties_klein"
             android:icon="@drawable/ic_search_white_24dp"
             app:showAsAction="never"/>
 
     <!-- grote lijstweergave -->
     <item
+            android:id="@+id/ab_options_big"
             android:title="@string/ab_options_listdesign_small"
-            android:id="@+id/ab_opties_groot"
             android:icon="@drawable/ic_search_white_24dp"
             app:showAsAction="never"/>
 </menu>
