--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetinglist.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetinglist.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- een fragment voor een lijst weer te geven -->
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
