--- a/CarMeets Android App/app/src/main/res/layout/fragment_placeholder_logo.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_placeholder_logo.xml
@@ -26,7 +26,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
-            android:contentDescription="@string/carmeets_logo_alt"/>
+            android:contentDescription="@string/alt_carmeets_logo"/>
 
     <!-- scheidingslijn voor 50 50 -->
     <android.support.constraint.Guideline
@@ -43,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:text="@string/about_carmeets"
+            android:text="@string/txt_about_carmeets"
             android:textSize="15sp"
             android:textAlignment="center"
 
