--- a/CarMeets Android App/app/src/main/res/layout/fragment_preferences.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_preferences.xml
@@ -62,6 +62,26 @@
             app:layout_constraintStart_toStartOf="@id/guideline_preferences_10percent_vertical"
             app:layout_constraintEnd_toEndOf="@id/guideline_preferences_account_90percent_vertical"
             app:layout_constraintTop_toBottomOf="@+id/txt_preferences_title"
+            app:layout_constraintBottom_toTopOf="@+id/btn_preferences_change_default_list_layout"
+
+            android:layout_marginTop="16dp"
+
+            app:layout_constraintHorizontal_bias="0.5"
+    />
+
+    <!-- Startscherm instellen -->
+    <Button
+            android:id="@+id/btn_preferences_change_default_list_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:textColor="@android:color/black"
+            android:text="@string/txt_preferences_default_list_layout"
+            android:background="@color/lightGrey"
+
+            app:layout_constraintStart_toStartOf="@id/guideline_preferences_10percent_vertical"
+            app:layout_constraintEnd_toEndOf="@id/guideline_preferences_account_90percent_vertical"
+            app:layout_constraintTop_toBottomOf="@+id/btn_preferences_change_boot_page"
             app:layout_constraintBottom_toTopOf="@+id/btn_preferences_change_default_categories"
 
             android:layout_marginTop="16dp"
@@ -81,7 +101,7 @@
 
             app:layout_constraintStart_toStartOf="@id/guideline_preferences_10percent_vertical"
             app:layout_constraintEnd_toEndOf="@id/guideline_preferences_account_90percent_vertical"
-            app:layout_constraintTop_toBottomOf="@+id/btn_preferences_change_boot_page"
+            app:layout_constraintTop_toBottomOf="@+id/btn_preferences_change_default_list_layout"
             app:layout_constraintBottom_toBottomOf="parent"
 
             android:layout_marginTop="16dp"
