--- a/CarMeets Android App/app/src/main/res/layout/fragment_manage_account.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_manage_account.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:text="@string/txt_preferences"
+            android:text="@string/txt_manage_account"
             android:textSize="30sp"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold"
